[package]
name = "failpoint"
version = "2.1.0"
edition = "2021"
authors = ["Hugh Emberson <hugh_emberson@gmail.com>"]
description = "Simple fault injection"
license = "MIT OR Apache-2.0"

[lib]
name = "failpoint"

[features]
default = ["failpoint_enabled"]
failpoint_enabled = []

[dependencies]

[dev-dependencies]
anyhow = "1.0.99"
thiserror = "2.0.17"
test_log_collector = { git = "https://github.com/hughe/test_log_collector", version = "1.0.0" }
